--- a/about.html
+++ b/about.html
@@ -186,13 +186,14 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_04.jpg" alt="" class="team-image">
+                <img src="assets/images/abhijit.jpg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://twitter.com/Abhijit99789986"><i class="fa fa-twitter"></i></a></li>
+                      <li><a href="https://instagram.com/abhijith4ever"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/abhijith4ever/"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://github.com/kannanabhi"><i class="fa fa-github"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -249,7 +250,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_04.jpg" alt="" class="team-image">
+                <img src="assets/images/taha.jpeg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -290,13 +291,13 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_06.jpg" alt="" class="team-image">
+                <img src="assets/images/maaz.jpg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://github.com/DeysZam"><i class="fa fa-github"></i></a></li>
+                      <li><a href="https://www.instagram.com/_ilate_/"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/maaz-husain-698584206/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -332,7 +333,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_05.jpg" alt="" class="team-image">
+                <img src="assets/images/meet.jpeg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
@@ -353,13 +354,14 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_06.jpg" alt="" class="team-image">
+                <img src="assets/images/abhinav.jpg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://www.facebook.com/Abhinav.Choudhary.1234"><i class="fa fa-facebook"></i></a></li>
+                      <li><a href="https://www.instagram.com/_chacha_choudhary_/"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/abhinav-choudhary-115a841b8/"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://github.com/aksh2001"><i class="fa fa-github"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -374,13 +376,12 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_06.jpg" alt="" class="team-image">
+                <img src="assets/images/suyash.png" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
-                      <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                      <li><a href="#"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+                      <li><a href="https://www.instagram.com/__.suyash_/"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/suyash-kumar-55243b1bb/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
                   </div>
                 </div>
@@ -416,7 +417,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_06.jpg" alt="" class="team-image">
+                <img src="assets/images/aryan.jpeg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
