suyash image fix (hopefully)

--- a/about.html
+++ b/about.html
@@ -291,7 +291,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/maaz.jpg" alt="" class="team-image">
+                <img src="assets/images/maaz.png" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
