--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="description" content="The homepage of Physics Association, BITS Pilani">
     <meta name="author" content="">
     <meta property="og:image" content="https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/feature-image.jpg" />
+    <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
     <title>Physics Association</title>
