--- a/about.html
+++ b/about.html
@@ -46,7 +46,10 @@ https://templatemo.com/tm-546-sixteen-clothing
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html"><h2>Physics Association</h2></a>
+          <a class="navbar-brand" href="index.html">
+            <img href="assets/images/logo.png" height="100">
+            <h2 style="color:red;">Physics</h2> <h2>Association</h2>
+          </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
