--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@ https://templatemo.com/tm-546-sixteen-clothing
       <nav class="navbar navbar-expand-lg">
         <div class="container">
           <a class="navbar-brand" href="index.html">
-            <img href="assets/images/logo.png" height="100" style="display: inline-block;">
+            <img href="assets/images/logo.png" height="100" style="display: flex;">
             <h2 style="color:red;">Physics</h2> <h2>Association</h2>
           </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
