--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ https://templatemo.com/tm-546-sixteen-clothing
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html" style="display: inline-block;">
+          <a class="navbar-brand" href="index.html" style="display: flex;">
             <img href="assets/images/logo.png" height="100">
             <h2 style="color:red;">Physics</h2> <h2>Association</h2>
           </a>
