--- a/about.html
+++ b/about.html
@@ -43,6 +43,7 @@ https://templatemo.com/tm-546-sixteen-clothing
     <!-- ***** Preloader End ***** -->
 
 <!-- Header -->
+    <!-- Header -->
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
@@ -54,12 +55,11 @@ https://templatemo.com/tm-546-sixteen-clothing
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item">
+              <li class="nav-item active">
                 <a class="nav-link" href="https://bitsphyassoc.github.io">Home</a>
               </li>
-              <li class="nav-item active">
-                <a class="nav-link" href="https://bitsphyassoc.github.io/about">About Us</a>
-                <span class="sr-only">(current)</span>
+              <li class="nav-item">
+                <a class="nav-link" href="https://bitsphyassoc.github.io/about">About Us<span class="sr-only">(current)</span></a>
               </li> 
               <li class="nav-item">
                 <a class="nav-link" href="https://bitsphyassoc.github.io/blog">Blog</a>
@@ -67,11 +67,18 @@ https://templatemo.com/tm-546-sixteen-clothing
               <li class="nav-item">
                 <a class="nav-link" href="https://www.instagram.com/bits_phyassoc/">Short Posts</a>
               </li>
+              
+              <ul class="social-icons">
+                <li><a href="https://www.facebook.com/Physics.Association.BITSPilani/"><i class="fa fa-facebook"></i></a></li>
+                <li><a href="https://www.linkedin.com/company/physicsassociationbitspilani"><i class="fa fa-linkedin"></i></a></li>
+                <li><a href="https://www.instagram.com/bits_phyassoc/"><i class="fa fa-instagram"></i></a></li>
+              </ul>
             </ul>
           </div>
         </div>
       </nav>
     </header>
+
     <!-- Page Content -->
     <div class="page-heading about-heading header-text">
       <div class="container">
