--- a/about.html
+++ b/about.html
@@ -42,24 +42,22 @@ https://templatemo.com/tm-546-sixteen-clothing
     </div>  
     <!-- ***** Preloader End ***** -->
 
-<!-- Header -->
     <!-- Header -->
     <header class="">
       <nav class="navbar navbar-expand-lg">
         <div class="container">
-          <a class="navbar-brand" href="index.html">
-            <h2 style="color:red;">Physics</h2> <h2>Association</h2>
-          </a>
+          <a class="navbar-brand" href="index.html"><h2>Physics Association</h2></a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
+              <li class="nav-item">
                 <a class="nav-link" href="https://bitsphyassoc.github.io">Home</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://bitsphyassoc.github.io/about">About Us<span class="sr-only">(current)</span></a>
+              <li class="nav-item active">
+                <a class="nav-link" href="https://bitsphyassoc.github.io/about">About Us</a>
+                <span class="sr-only">(current)</span>
               </li> 
               <li class="nav-item">
                 <a class="nav-link" href="https://bitsphyassoc.github.io/blog">Blog</a>
@@ -67,12 +65,6 @@ https://templatemo.com/tm-546-sixteen-clothing
               <li class="nav-item">
                 <a class="nav-link" href="https://www.instagram.com/bits_phyassoc/">Short Posts</a>
               </li>
-              
-              <ul class="social-icons">
-                <li><a href="https://www.facebook.com/Physics.Association.BITSPilani/"><i class="fa fa-facebook"></i></a></li>
-                <li><a href="https://www.linkedin.com/company/physicsassociationbitspilani"><i class="fa fa-linkedin"></i></a></li>
-                <li><a href="https://www.instagram.com/bits_phyassoc/"><i class="fa fa-instagram"></i></a></li>
-              </ul>
             </ul>
           </div>
         </div>
