added anshuman image

--- a/about.html
+++ b/about.html
@@ -124,7 +124,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
-                <img src="assets/images/team_01.jpg" alt="" class="team-image">
+                <img src="assets/images/anshuman.jpg" alt="" class="team-image">
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
