--- a/about.html
+++ b/about.html
@@ -382,6 +382,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <div class="hover-effect">
                   <div class="hover-content">
                     <ul class="social-icons">
+                      <li><a href="https://www.facebook.com/suyash.kumar.9461799"><i class="fa fa-facebook"></i></a></li>
                       <li><a href="https://www.instagram.com/__.suyash_/"><i class="fa fa-instagram"></i></a></li>
                       <li><a href="https://www.linkedin.com/in/suyash-kumar-55243b1bb/"><i class="fa fa-linkedin"></i></a></li>
                     </ul>
