--- a/index.html
+++ b/index.html
@@ -85,6 +85,9 @@ https://templatemo.com/tm-546-sixteen-clothing
     <!-- Page Content -->
     <!-- Banner Starts Here -->
     <div class="banner header-text">
+      <div class="logo-container" style="position: relative;">
+        <img href="assets/images/logo.png" height="200" width="200">
+      </div>
       <div class="owl-banner owl-carousel">
         <div class="banner-item-01">
           <div class="text-content-1">
