--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@ https://templatemo.com/tm-546-sixteen-clothing
     <!-- Page Content -->
     <!-- Banner Starts Here -->
     <div class="banner header-text">
-      <div class="logo-container" style="position: relative;">
+      <div class="logo-container">
         <img href="assets/images/logo.png" height="200" width="200">
       </div>
       <div class="owl-banner owl-carousel">
