--- a/about.html
+++ b/about.html
@@ -73,6 +73,7 @@ https://templatemo.com/tm-546-sixteen-clothing
 
     <!-- Page Content -->
     <div class="page-heading about-heading header-text">
+      <div class="logo-container"></div>
       <div class="container">
         <div class="row">
           <div class="col-md-12">
