--- a/index.html
+++ b/index.html
@@ -85,8 +85,7 @@ https://templatemo.com/tm-546-sixteen-clothing
     <!-- Page Content -->
     <!-- Banner Starts Here -->
     <div class="banner header-text">
-      <div class="logo-container">
-      </div>
+      <div class="logo-container"></div>
       <div class="owl-banner owl-carousel">
         <div class="banner-item-01">
           <div class="text-content-1">
