--- a/about.html
+++ b/about.html
@@ -73,12 +73,14 @@ https://templatemo.com/tm-546-sixteen-clothing
 
     <!-- Page Content -->
     <div class="page-heading about-heading header-text">
-      <div class="logo-container"></div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-12">
-            <div class="text-content">
-              <h4 style="color:seashell">ABOUT US</h4>
+      <div>
+        <div class="logo-container"></div>
+        <div class="container">
+          <div class="row">
+            <div class="col-md-12">
+              <div class="text-content">
+                <h4 style="color:seashell">ABOUT US</h4>
+              </div>
             </div>
           </div>
         </div>
