--- a/about.html
+++ b/about.html
@@ -72,9 +72,7 @@ https://templatemo.com/tm-546-sixteen-clothing
     </header>
 
     <!-- Page Content -->
-    <div class="page-heading about-heading header-text">
-      <div class="logo-container"></div>
-    </div>
+    <div class="page-heading about-heading header-text"></div>
 
     <div class="best-features about-features">
       <div class="container">
