--- a/index.html
+++ b/index.html
@@ -85,17 +85,9 @@ https://templatemo.com/tm-546-sixteen-clothing
     <!-- Page Content -->
     <!-- Banner Starts Here -->
     <div class="banner header-text">
-      <div class="logo-container"></div>
       <div class="owl-banner owl-carousel">
         <div class="banner-item-01">
-          <div class="text-content-1">
-            <h2 style="font-size: 30px; color:seashell">If you want to master something, teach it!</h2>
-            <h2 style="font-size: 24px; color:silver"><em>- Richard Feynman</em></h2>
-          </div>
-          <div class="text-content-2" style="bottom: 0%;">
-            <h4 style="color:red;">PHYSICS ASSOCIATION</h4>
-            <h4 style="color:white;">BITS PILANI</h4>
-          </div>
+
         </div>
         <div class="banner-item-02">
           <div class="text-content-1">
@@ -109,8 +101,8 @@ https://templatemo.com/tm-546-sixteen-clothing
         </div>
         <div class="banner-item-03">
           <div class="text-content-1">
-            <h2 style="font-size: 30px; color:seashell">If you want to master something, teach it!</h2>
-            <h2 style="font-size: 24px; color:silver"><em>- Richard Feynman</em></h2>
+            <h2 style="font-size: 30px; color:seashell">"Bio ka choda"</h2>
+            <h2 style="font-size: 24px; color:silver"><em>- Anshuman Verma</em></h2>
           </div>
           <div class="text-content-2" style="bottom: 0%;">
             <h4 style="color:red;">PHYSICS ASSOCIATION</h4>
