--- a/index.html
+++ b/index.html
@@ -101,8 +101,18 @@ https://templatemo.com/tm-546-sixteen-clothing
         </div>
         <div class="banner-item-03">
           <div class="text-content-1">
-            <h2 style="font-size: 30px; color:seashell">"Bio ka choda"</h2>
-            <h2 style="font-size: 24px; color:silver"><em>- Anshuman Verma</em></h2>
+            <h2 style="font-size: 30px; color:seashell">God does not play dice</h2>
+            <h2 style="font-size: 24px; color:silver"><em>- Albert Einstein</em></h2>
+          </div>
+          <div class="text-content-2" style="bottom: 0%;">
+            <h4 style="color:red;">PHYSICS ASSOCIATION</h4>
+            <h4 style="color:white;">BITS PILANI</h4>
+          </div>
+        </div>
+        <div class="banner-item-04">
+          <div class="text-content-1">
+            <h2 style="font-size: 30px; color:seashell">Don't tell me what to do</h2>
+            <h2 style="font-size: 24px; color:silver"><em>- God</em></h2>
           </div>
           <div class="text-content-2" style="bottom: 0%;">
             <h4 style="color:red;">PHYSICS ASSOCIATION</h4>
