--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-6">
             <div class="left-content">
-              <p>We are a bunch of nerds trying to promote the beautiful language of physics in all of its true glory. We have a swanky team of students from BITS Pilani, Pilani Campus. We put up articles in our blog right <a href="https://bitsphyassoc.github.io/blog">here</a> and make instagram posts explaining cool physics phenomenon <a href="">here</a>. Be sure to check them out!</p>
+              <p>We are a bunch of nerds trying to promote the beautiful language of physics in all of its true glory. We have a swanky team of students from BITS Pilani, Pilani Campus. We would have conducted fun events on the campus if we had an offline semester. Sad, right? Wrong! We provide to you quality content right here, right now in the middle of the pandemic. We put up articles in our blog right <a href="https://bitsphyassoc.github.io/blog">here</a> and make instagram posts explaining cool physics phenomenon <a href="">here</a>. Be sure to check all of these and make sure to follow all of our socials for the latest updates on our work!</p>
               <a href="about.html" class="filled-button">Read More</a>
             </div>
           </div>
