--- a/index.html
+++ b/index.html
@@ -146,6 +146,27 @@ https://templatemo.com/tm-546-sixteen-clothing
       </div>
     </div>
 
+    <div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-12">
+            <div class="section-heading">
+              <h2>Recent Events</h2>
+              Latest ones on top
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="left-content">
+              <div class ="product-item">
+                <h6>Profile Building Session - by Nikita Saxena</h6>
+                <p>Fill in text</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <div class="latest-products">
       <div class="container">
         <div class="row">
