--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-4">
             <div class="left-content">
-              <div class ="product-item">
-                <h6>Profile Building Session - by Nikita Saxena</h6>
+              <div class ="event-item">
+                <h4>Profile Building Session - by Nikita Saxena</h4>
                 <p>Fill in text</p>
               </div>
             </div>
