--- a/index.html
+++ b/index.html
@@ -151,16 +151,13 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Recent Events</h2>
-              Latest ones on top
+              <h2>Latest Events</h2>
             </div>
           </div>
           <div class="col-md-4">
-            <div class="left-content">
-              <div class ="event-item">
-                <h4>Profile Building Session - by Nikita Saxena</h4>
-                <p>Fill in text</p>
-              </div>
+            <div class ="event-item">
+              <h4 style="color: navy;">Profile Building Session - by Nikita Saxena</h4>
+              <p>Fill in text</p>
             </div>
           </div>
         </div>
