--- a/index.html
+++ b/index.html
@@ -151,13 +151,18 @@ https://templatemo.com/tm-546-sixteen-clothing
         <div class="row">
           <div class="col-md-12">
             <div class="section-heading">
-              <h2>Latest Events</h2>
+              <h2>Upcoming Events</h2>
             </div>
           </div>
           <div class="col-md-4">
             <div class ="event-item">
-              <h4 style="color: navy;">Profile Building Session - by Nikita Saxena</h4>
-              <p>Fill in text</p>
+              <h4 style="color: navy; font-size: medium;">Profile Building Session - by Nikita Saxena</h4>
+              <div class="left-content">
+                <p>We invite you to a Profile Building Session with Nikita Saxena, a pre-final year M.Sc. Physics and B.E. Computer Science student from BITS Pilani, Pilani Campus. Her notable achievements include being a DAAD and CHARPAK scholar. She has also worked as an undergraduate research assistant at UC San Diego and is currently a junior investigator at IAIFI.</p>
+                <p>7 PM - 2nd September, 2021</p>
+                <p>Meet Link: <a href="meet.google.com/hys-dieg-ofk">meet.google.com/hys-dieg-ofk</a></p>
+              </div>
+              <div class="right-image"><img src="https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/profile-session.jpg" alt=""></div>
             </div>
           </div>
         </div>
