--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               <h2>Upcoming Events</h2>
             </div>
           </div>
-          <div class="col-md-4">
+          <div class="col-md-6">
             <div class ="event-item">
               <h4 style="color: navy; font-size: medium;">Profile Building Session - by Nikita Saxena</h4>
               <div class="left-content">
@@ -162,7 +162,11 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <p>7 PM - 2nd September, 2021</p>
                 <p>Meet Link: <a href="meet.google.com/hys-dieg-ofk">meet.google.com/hys-dieg-ofk</a></p>
               </div>
-              <div class="right-image"><img src="https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/profile-session.jpg" alt=""></div>
+              <div class="col-md-6">
+                <div class="right-image">
+                  <img src="https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/profile-session.jpg" alt="">
+                </div>
+              </div>
             </div>
           </div>
         </div>
