--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-6">
             <div class ="event-item">
-              <h4 style="color: navy; font-size: medium;">Profile Building Session - by Nikita Saxena</h4>
+              <h4 style="color: navy; font-size: large;">Profile Building Session - by Nikita Saxena</h4>
               <div class="left-content">
                 <p>We invite you to a Profile Building Session with Nikita Saxena, a pre-final year M.Sc. Physics and B.E. Computer Science student from BITS Pilani, Pilani Campus. Her notable achievements include being a DAAD and CHARPAK scholar. She has also worked as an undergraduate research assistant at UC San Diego and is currently a junior investigator at IAIFI.</p>
                 <p>7 PM - 2nd September, 2021</p>
