--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-6">
             <div class="right-image">
-              <img src="https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/profile-session.jpg" alt="">
+              <img src="https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/profile-session.jpg" height="500" alt="">
             </div>
           </div>
         </div>
