--- a/index.html
+++ b/index.html
@@ -159,7 +159,18 @@ https://templatemo.com/tm-546-sixteen-clothing
               <h4 style="color: navy; font-size: large;">Profile Building Session - by Nikita Saxena</h4>
               <div class="left-content">
                 <p>We invite you to a Profile Building Session with Nikita Saxena, a pre-final year M.Sc. Physics and B.E. Computer Science student from BITS Pilani, Pilani Campus. Her notable achievements include being a DAAD and CHARPAK scholar. She has also worked as an undergraduate research assistant at UC San Diego and is currently a junior investigator at IAIFI.</p>
+                <p></p>
+                <p>In this session, she will be talking about:
+                  <ol>
+                    <li>How to build a strong profile</li>
+                    <li>How to secure internships at startups (deep learning-based)</li>
+                    <li>How to shortlist professors, universities, and projects</li>
+                    <li>Application procedure of DAAD and CHARPAK</li>
+                  </ol>
+                </p>
+                <p></p>
                 <p>7 PM - 2nd September, 2021</p>
+                <p>Leave your questions in this <a href="https://forms.gle/Xo6acvfDUc2eM3Qh9">form</a>.</p>
                 <p>Meet Link: <a href="meet.google.com/hys-dieg-ofk">meet.google.com/hys-dieg-ofk</a></p>
               </div>
             </div>
