--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <p>We invite you to a Profile Building Session with Nikita Saxena, a pre-final year M.Sc. Physics and B.E. Computer Science student from BITS Pilani, Pilani Campus. Her notable achievements include being a DAAD and CHARPAK scholar. She has also worked as an undergraduate research assistant at UC San Diego and is currently a junior investigator at IAIFI.</p>
                 <p></p>
                 <p>In this session, she will be talking about:
-                  <ol style="color: oldlace; font-size: 14px; font-weight: 300;">
+                  <ol style="color: seashell; font-size: 14px; font-weight: 300;">
                     <li>How to build a strong profile</li>
                     <li>How to secure internships at startups (deep learning-based)</li>
                     <li>How to shortlist professors, universities, and projects</li>
