--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <li><a href="https://www.facebook.com/Physics.Association.BITSPilani/"><i class="fa fa-facebook"></i></a></li>
                 <li><a href="https://www.linkedin.com/company/physicsassociationbitspilani"><i class="fa fa-linkedin"></i></a></li>
                 <li><a href="https://www.instagram.com/bits_phyassoc/"><i class="fa fa-instagram"></i></a></li>
+                <li><a href="https://www.youtube.com/channel/UCh81x2kZQHc64xVwWAmCKWQ"><i class="fa fa-youtube"></i></a></li>
               </ul>
             </ul>
           </div>
