--- a/index.html
+++ b/index.html
@@ -170,9 +170,7 @@ https://templatemo.com/tm-546-sixteen-clothing
                   </ol>
                 </p>
                 <p></p>
-                <p>7 PM - 2nd September, 2021</p>
-                <p>Leave your questions in this <a href="https://forms.gle/Xo6acvfDUc2eM3Qh9">form</a>.</p>
-                <p>Meet Link: <a href="meet.google.com/hys-dieg-ofk">meet.google.com/hys-dieg-ofk</a></p>
+                <p>A recording of the talk will be uploaded on our <a href="https://www.youtube.com/channel/UCh81x2kZQHc64xVwWAmCKWQ">YouTube channel</a> shortly.</p>
               </div>
             </div>
           </div>
