--- a/index.html
+++ b/index.html
@@ -175,7 +175,8 @@ https://templatemo.com/tm-546-sixteen-clothing
                   </ol>
                 </p>
                 <p></p>
-                <p>A recording of the talk will be uploaded on our <a href="https://www.youtube.com/channel/UCh81x2kZQHc64xVwWAmCKWQ">YouTube channel</a> shortly.</p>
+                <p>A recording of the talk can be found on our <a href="https://www.youtube.com/channel/UCh81x2kZQHc64xVwWAmCKWQ">YouTube channel</a>.</p>
+                <p>The link to the talk can be found <a href="https://youtu.be/yqcYp7lajI0">here</a>.</p>
               </div>
             </div>
           </div>
