--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-6">
             <div class="left-content">
-              <p>We are a bunch of nerds trying to promote the beautiful language of physics in all of its true glory. We have a swanky team of students from BITS Pilani, Pilani Campus. We would have conducted fun events on the campus if we had an offline semester. Sad, right? Wrong! We provide to you quality content right here, right now in the middle of the pandemic. We put up articles in our blog right <a href="https://bitsphyassoc.github.io/blog">here</a> and make instagram posts explaining cool physics phenomenon <a href="">here</a>. Be sure to check all of these and make sure to follow all of our socials for the latest updates on our work!</p>
+              <p>We are a bunch of nerds trying to promote the beautiful language of physics in all of its true glory. We have a swanky team of students from BITS Pilani, Pilani Campus. We would have conducted fun events on the campus if we had an offline semester. Sad, right? Wrong! We provide to you quality content right here, right now in the middle of the pandemic. (SIKE! We're all back on campus! We will be conducting amazing events soon!) We put up articles in our blog right <a href="https://bitsphyassoc.github.io/blog">here</a> and make instagram posts explaining cool physics phenomenon <a href="">here</a>. Be sure to check all of these and make sure to follow all of our socials for the latest updates on our work!</p>
               <a href="about.html" class="filled-button">Read More</a>
             </div>
           </div>
@@ -157,10 +157,28 @@ https://templatemo.com/tm-546-sixteen-clothing
           </div>
           <div class="col-md-6">
             <div class="right-image">
-              <img src="https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/profile-session.jpg" height="500" alt="">
+              <img src="https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/Delft Talk.jpeg" height="500" alt="">
             </div>
           </div>
           <div class="col-md-6">
+            <div class ="event-item">
+              <h4 style="color: DodgerBlue; font-size: large;">"Becoming a Quantum Engineer" by Siddharth Singh</h4>
+              <div class="left-content">
+                <p>We invite you to a talk by Mr. Siddharth Singh, a Ph.D. candidate at QuTech, TU Delft (Netherlands), one of the leading advanced research centers for Quantum Technology. He was an M.Sc. Physics with B.E. Mechanical Engineering undergraduate at BITS Pilani (2015-2020).</p>
+                <p></p>
+                <p>In this session, he will be sharing his valuable insights on: 
+                  <ol style="color: seashell; font-size: 14px; font-weight: 300;">
+                    <li>The field of quantum engineering </li>
+                    <li>What a Quantum Engineer does</li>
+                    <li>Skills that a Quantum Engineer must have</li>
+                    <li>How he secured a Ph.D. position at TU Delft </li>
+                    <li>How people from various disciplines can explore this field</li>
+                  </ol>
+                </p>
+                <p></p>
+                <p>A recording of the talk will be made available on our <a href="https://www.youtube.com/channel/UCh81x2kZQHc64xVwWAmCKWQ">YouTube channel</a> at this <a href="https://youtu.be/yqcYp7lajI0">link</a> soon.</p>
+              </div>
+            </div>
             <div class ="event-item">
               <h4 style="color: DodgerBlue; font-size: large;">Profile Building Session - by Nikita Saxena</h4>
               <div class="left-content">
@@ -178,6 +196,11 @@ https://templatemo.com/tm-546-sixteen-clothing
                 <p>A recording of the talk can be found on our <a href="https://www.youtube.com/channel/UCh81x2kZQHc64xVwWAmCKWQ">YouTube channel</a>.</p>
                 <p>The link to the talk can be found <a href="https://youtu.be/yqcYp7lajI0">here</a>.</p>
               </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="right-image">
+              <img src="https://raw.githubusercontent.com/bitsphyassoc/bitsphyassoc.github.io/main/assets/images/profile-session.jpg" height="500" alt="">
             </div>
           </div>
         </div>
