--- a/about.html
+++ b/about.html
@@ -361,7 +361,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               </div>
               <div class="down-content">
                 <h4>Abhinav Choudhary</h4>
-                <span>Junior Editor</span>
+                <span>Cheif Editor</span>
               </div>
             </div>
           </div>
