--- a/about.html
+++ b/about.html
@@ -235,7 +235,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               </div>
               <div class="down-content">
                 <h4>Nehil Singh</h4>
-                <span>Content Team Head</span>
+                <span>Joint Apogee Coordinator</span>
               </div>
             </div>
           </div>
@@ -255,7 +255,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               </div>
               <div class="down-content">
                 <h4>Taha Raja</h4>
-                <span>Content Team Head</span>
+                <span>Apogee Coordinator</span>
               </div>
             </div>
           </div>
@@ -276,28 +276,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               </div>
               <div class="down-content">
                 <h4>Gurupam Dixit</h4>
-                <span>Design Team Head</span>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-md-4">
-            <div class="team-member">
-              <div class="thumb-container">
-                <img src="assets/images/maaz.png" alt="" class="team-image">
-                <div class="hover-effect">
-                  <div class="hover-content">
-                    <ul class="social-icons">
-                      <li><a href="https://github.com/DeysZam"><i class="fa fa-github"></i></a></li>
-                      <li><a href="https://www.instagram.com/_ilate_/"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="https://www.linkedin.com/in/maaz-husain-698584206/"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="down-content">
-                <h4>Maaz</h4>
-                <span>Design Team Head</span>
+                <span>Chief Design Head</span>
               </div>
             </div>
           </div>
@@ -318,7 +297,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               </div>
               <div class="down-content">
                 <h4>Ansh Mahapatra</h4>
-                <span>Event Co-ordinator</span>
+                <span>Public Relations Head</span>
               </div>
             </div>
           </div>
@@ -339,7 +318,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               </div>
               <div class="down-content">
                 <h4>Meet Khatri</h4>
-                <span>Event Co-ordinator</span>
+                <span>Resource Manager</span>
               </div>
             </div>
           </div>
@@ -361,7 +340,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               </div>
               <div class="down-content">
                 <h4>Abhinav Choudhary</h4>
-                <span>Cheif Editor</span>
+                <span>Chief Editor</span>
               </div>
             </div>
           </div>
@@ -382,7 +361,7 @@ https://templatemo.com/tm-546-sixteen-clothing
               </div>
               <div class="down-content">
                 <h4>Suyash Kumar</h4>
-                <span>Junior Editor</span>
+                <span>Treasurer</span>
               </div>
             </div>
           </div>
@@ -403,36 +382,10 @@ https://templatemo.com/tm-546-sixteen-clothing
               </div>
               <div class="down-content">
                 <h4>Aaryav Mishra</h4>
-                <span>Public Relations Coordinator</span>
+                <span>President</span>
               </div>
             </div>
           </div>
-
-          <div class="col-md-4">
-            <div class="team-member">
-              <div class="thumb-container">
-                <img src="assets/images/aryan.jpeg" alt="" class="team-image">
-                <div class="hover-effect">
-                  <div class="hover-content">
-                    <ul class="social-icons">
-                      <li><a href="https://twitter.com/AryanSi33620382"><i class="fa fa-twitter"></i></a></li>
-                      <li><a href="https://www.instagram.com/aryanfury007/"><i class="fa fa-instagram"></i></a></li>
-                      <li><a href="https://www.linkedin.com/in/aryan-singh-9282871ba/"><i class="fa fa-linkedin"></i></a></li>
-                    </ul>
-                  </div>
-                </div>
-              </div>
-              <div class="down-content">
-                <h4>Aryan Singh</h4>
-                <span>Public Relations Coordinator</span>
-              </div>
-            </div>
-          </div>
-
-        </div>
-      </div>
-    </div>
-
 
     <!-- Bootstrap core JavaScript -->
     <script src="vendor/jquery/jquery.min.js"></script>
