--- a/about.html
+++ b/about.html
@@ -239,7 +239,27 @@ https://templatemo.com/tm-546-sixteen-clothing
               </div>
             </div>
           </div>
-
+          <div class="col-md-4">
+            <div class="team-member">
+              <div class="thumb-container">
+                <img src="assets/images/maaz.png" alt="" class="team-image">
+                <div class="hover-effect">
+                  <div class="hover-content">
+                    <ul class="social-icons">
+                      <li><a href="https://github.com/DeysZam"><i class="fa fa-github"></i></a></li>
+                      <li><a href="https://www.instagram.com/_ilate_/"><i class="fa fa-instagram"></i></a></li>
+                      <li><a href="https://www.linkedin.com/in/maaz-husain-698584206/"><i class="fa fa-linkedin"></i></a></li>
+                    </ul>
+                  </div>
+                </div>
+              </div>
+              <div class="down-content">
+                <h4>Aryaman Das</h4>
+                <span>Vice President</span>
+            
+              </div>
+            </div>
+          </div>
           <div class="col-md-4">
             <div class="team-member">
               <div class="thumb-container">
